# sleep-noise-guard

./: .gitignore  README.md  pyproject.toml  requirements-build.txt
.github/workflows/: build-release.yml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/sleepnoiseguard/: MainActivity.java
android/app/src/main/res/values/: styles.xml
docs/: 中文说明.md
docs/superpowers/plans/: 2026-06-27-cross-platform-packaging.md
macos/: SleepNoiseGuardApp.swift
packaging/windows/: sleep-noise-guard-windows.spec
scripts/: build_macos_app.sh  build_macos_dmg.sh  generate_sample_sounds.py
sleep_noise_guard/: __init__.py  audio.py  cli.py  config.py  monitor.py  noise_log.py  player.py  policy.py  sound_library.py  windows_desktop.py
tests/: test_audio.py  test_monitor.py  test_noise_log.py  test_noise_policy.py  test_sound_library.py  test_windows_packaging.py
